@@ -31,9 +31,9 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.5-cvs-b105';
+$gallery->version = '1.4.5-cvs-b106';
 $gallery->config_version = 83;
-$gallery->album_version = 31;
+$gallery->album_version = 32;
 $gallery->user_version = 5;
 $gallery->url = "http://gallery.sourceforge.net";
 
