@@ -1876,49 +1876,21 @@ function getItemCaptureDate($file) {
 		if (isset($exifData["Date/Time"])) {
 			$success = 1;
 			$tempDate = split(" ", $exifData["Date/Time"], 2);
-			$tempDay = split(":" , $tempDate[0], 3);
-			$tempTime = split(":", $tempDate[1], 3);
-			$hours = "$tempTime[0]";
-			$minutes = "$tempTime[1]";
-			$seconds = "$tempTime[2]";
-			$mday = "$tempDay[2]";
-			$mon = "$tempDay[1]";
-			$year = "$tempDay[0]";
+			$tempDay = strtr($tempDate[0], ':', '-');
+			$tempTime = $tempDate[1];
 
-			$itemCaptureDate['hours'] = $hours;
-			$itemCaptureDate['minutes'] = $minutes;
-			$itemCaptureDate['seconds'] = $seconds;
-			$itemCaptureDate['mday'] = $mday;
-			$itemCaptureDate['mon'] = $mon;
-			$itemCaptureDate['year'] = $year;
+			$itemCaptureTimeStamp = strtotime("$tempDay $tempTime");
 		}
 	}
 	if (!$success) { // we were not able to get the capture date from exif... use file creation time
-		$itemCaptureDate = getdate(filemtime($file));
-	}
-
-	// make sure everything (other than year) is 2 digits so we can do sorts with
-	// the resulting concatenated data i.e.:  20010708123412
-	if (strlen($itemCaptureDate["mon"]) == 1) {
-		$itemCaptureDate["mon"] = "0" . $itemCaptureDate["mon"];
-	}
-	if (strlen($itemCaptureDate["mday"]) == 1) {
-		$itemCaptureDate["mday"] = "0" . $itemCaptureDate["mday"];
-	}
-	if (strlen($itemCaptureDate["hours"]) == 1) {
-		$itemCaptureDate["hours"] = "0" . $itemCaptureDate["hours"];
-	}
-	if (strlen($itemCaptureDate["minutes"]) == 1) {
-		$itemCaptureDate["minutes"] = "0" . $itemCaptureDate["minutes"];
-	}
-	if (strlen($itemCaptureDate["seconds"]) == 1) {
-		$itemCaptureDate["seconds"] = "0" . $itemCaptureDate["seconds"];
+		$itemCaptureTimeStamp = filemtime($file);
 	}
 
 	if (isDebugging()) {
-		sprintf (_("IN UTIL ITEMCAPTUREDATE = %s"). '<br>', $itemCaptureDate['year']);
+		sprintf (_("IN UTIL ITEMCAPTUREDATE = %s"). '<br>', strftime('%Y', $itemCaptureTimeStamp));
 	}
-	return $itemCaptureDate;
+
+	return $itemCaptureTimeStamp;
 }
 
 function doCommand($command, $args=array(), $returnTarget="", $returnArgs=array()) {
@@ -2261,6 +2233,7 @@ function processNewImage($file, $tag, $name, $caption, $setCaption="", $extra_fi
 						break;
 					case 3:
 					/* Use capture date */
+						$caption = strftime($dateTimeFormat, getItemCaptureDate($file));
 						break;
 				}
 			}
@@ -3275,12 +3248,7 @@ function getExtraFieldsValues($index, $extra_fields, $full) {
 
 			if ($key == 'Capture Date') {
 				$itemCaptureDate = $gallery->album->getItemCaptureDate($index);
-				$table[$automaticFields[$key]] = strftime($gallery->app->dateTimeString , mktime ($itemCaptureDate['hours'],
-						$itemCaptureDate['minutes'],
-						$itemCaptureDate['seconds'],
-						$itemCaptureDate['mon'],
-						$itemCaptureDate['mday'],
-						$itemCaptureDate['year']));
+				$table[$automaticFields[$key]] = strftime($gallery->app->dateTimeString , $itemCaptureDate);
 			}
 
 			if ($key == 'Dimensions') {
