@@ -1,3 +1,9 @@
+2004-08-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b106
+
+	* Change: Use timestamp for itemCaptureDate. This required a album version bump.
+
+	* New: Possibility to use capture date as caption.
+
 2004-08-13  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b105
 
 	Change: Initial commit of a little Block for Caption Options during upload.
